fixing refresh page onSelect image on ios safari by Set the value of the input to null on each onclick event

--- a/src/pages/photo.css
+++ b/src/pages/photo.css
@@ -1,3 +1,10 @@
 .blur {
   filter: blur(8px);
 }
+
+.img {
+  margin: auto 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
